--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -853,27 +853,16 @@ archivePrefix = "arXiv",
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@article{price-whelan_2018,
-title={adrn/pyia: v0.2}, DOI={10.5281/zenodo.1228136}, abstractNote={a Python package for working with data from the Gaia mission}, publisher={Zenodo}, author={Adrian Price-Whelan}, year={2018}, month={Apr}
+@article{price-whelan2018,
+    author = {{Price-Whelan}, Adrian, M.},
+     title = {adrn/pyia: v0.2},
+       DOI = {10.5281/zenodo.1228136},
+    abstractNote = {a Python package for working with data from the Gaia mission},
+    publisher={Zenodo},
+    author={Adrian Price-Whelan},
+    year={2018},
+    month={Apr}
 }
-
-@article{astropy2013,
-Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
-Adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A},
-Archiveprefix = {arXiv},
-Author = {{Astropy Collaboration} and {Robitaille}, T.~P. and {Tollerud {\it et al}}, E.~J.},
-Doi = {10.1051/0004-6361/201322068},
-Eid = {A33},
-Eprint = {1307.6212},
-Journal = {\aap},
-Keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools},
-Month = oct,
-Pages = {A33},
-Primaryclass = {astro-ph.IM},
-Title = {{Astropy: A community Python package for astronomy}},
-Volume = 558,
-Year = 2013,
-Bdsk-Url-1 = {https://dx.doi.org/10.1051/0004-6361/201322068}}
 
 @ARTICLE{davenport2018,
        author = {{Davenport}, James R.~A. and {Covey}, Kevin R.},
@@ -1803,6 +1792,24 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{astropy2013,
+Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+Adsurl = {http://adsabs.harvard.edu/abs/2013A%26A...558A..33A},
+Archiveprefix = {arXiv},
+Author = {{Astropy Collaboration} and {Robitaille}, T.~P. and {Tollerud {\it et al}}, E.~J.},
+Doi = {10.1051/0004-6361/201322068},
+Eid = {A33},
+Eprint = {1307.6212},
+Journal = {\aap},
+Keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools},
+Month = oct,
+Pages = {A33},
+Primaryclass = {astro-ph.IM},
+Title = {{Astropy: A community Python package for astronomy}},
+Volume = 558,
+Year = 2013,
+Bdsk-Url-1 = {https://dx.doi.org/10.1051/0004-6361/201322068}}
+
 @ARTICLE{astropy2018,
        author = {{Astropy Collaboration} and {Price-Whelan}, A.~M. and
          {Sip{\H{o}}cz}, B.~M. and {G{\"u}nther}, H.~M. and {Lim}, P.~L. and
@@ -1917,4 +1924,11 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
+@ARTICLE{rao1973,
+       author = {{Rao}, Radhakrishna, C.},
+        title = "{Linear Statistical Inference and its Applications 2nd Ed}",
+      journal = {John Wiley \& Sons},
+         year = 1973,
+        month = apr,
+          doi = {10.1002/9780470316436},
+}
