--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -1,4 +1,4 @@
-% zip files.zip ms63.tex CMD_cuts_double.pdf main_figure.pdf gap.pdf vb_vs_teff.pdf vb_vz.pdf field_comparison.pdf bib.bib ms.pdf
+% zip files.zip ms63.tex CMD_cuts_double.pdf main_figure.pdf gap.pdf vb_vs_teff.pdf vb_vz.pdf field_comparison.pdf bib.bib ms.pdf table2.txt
 
 \documentclass{aastex63}
 
@@ -58,7 +58,7 @@
 \newcommand{\python}{{\it Python}}
 
 % \newcommand{\racomment}[1]{{\color{blue}#1}}
-\newcommand{\racomment}{}
+\newcommand{\racomment}[1]{{\color{black}#1}}
 
 % \received{June 1, 2019}
 % \revised{January 10, 2019}
@@ -1311,6 +1311,8 @@ KIC ID & Mass [M$_\odot$] & T$_\mathrm{eff}$ [K] & P$_\mathrm{rot}$ [days] & v$_
 1569682 & 0.57 & 3909 & 17.4 $\pm$ 0.2 & 4.4 $\pm$ 0.1 & 9.2 $\pm$ 0.1 \\
 \end{tabular}
 \end{center}
+\tablecomments{Table 2 is published in its entirety in the machine-readable format.
+      A portion is shown here for guidance regarding its form and content.}
 \end{table}
 
 \bibliography{bib}{}
