renaming bib file

--- a/paper/ms63.tex
+++ b/paper/ms63.tex
@@ -1315,7 +1315,7 @@ KIC ID & Mass [M$_\odot$] & T$_\mathrm{eff}$ [K] & P$_\mathrm{rot}$ [days] & v$_
       A portion is shown here for guidance regarding its form and content.}
 \end{table}
 
-\bibliography{bib}{}
+\bibliography{ms63}{}
 \bibliographystyle{aasjournal}
 
 %% This command is needed to show the entire author+affiliation list when
